사이트 이름 변경

--- a/index.html
+++ b/index.html
@@ -8,22 +8,22 @@
     <link href="https://fonts.googleapis.com/css?family=Jua&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <title>헬창 테스트</title>
-    <link rel="alternate" hreflang="ko" href="https://animalface.site/ko/index.html" />
-    <link rel="alternate" hreflang="en" href="https://animalface.site/en/index.html" />
-    <link rel="alternate" hreflang="es" href="https://animalface.site/es/index.html" />
-    <link rel="alternate" hreflang="ja" href="https://animalface.site/ja/index.html" />
-    <link rel="alternate" hreflang="zh" href="https://animalface.site/zh/index.html" />
-    <link rel="alternate" hreflang="vi" href="https://animalface.site/vi/index.html" />
-    <link rel="alternate" hreflang="id" href="https://animalface.site/id/index.html" />
-    <link rel="alternate" hreflang="x-default" href="https://animalface.site/" />
+    <link rel="alternate" hreflang="ko" href="https://healchang.site/ko/index.html" />
+    <link rel="alternate" hreflang="en" href="https://healchang.site/en/index.html" />
+    <link rel="alternate" hreflang="es" href="https://healchang.site/es/index.html" />
+    <link rel="alternate" hreflang="ja" href="https://healchang.site/ja/index.html" />
+    <link rel="alternate" hreflang="zh" href="https://healchang.site/zh/index.html" />
+    <link rel="alternate" hreflang="vi" href="https://healchang.site/vi/index.html" />
+    <link rel="alternate" hreflang="id" href="https://healchang.sitee/id/index.html" />
+    <link rel="alternate" hreflang="x-default" href="https://healchang.site/" />
     <meta name="title" content="헬창 테스트">
     <meta name="subject" content="사진으로 보는 AI 헬창 테스트, 나는 어느 정도의 몸일까요">
     <meta name="keywords" content="헬창 테스트, 인공지능 헬창 테스트, 헬창, 바디 테스트, 나와 닮은 몸, AI로 보는 몸">
     <meta name="author" content="준코딩">
     <meta name="description" content="사진으로 보는 인공지능 헬창 테스트, 어느정도의 헬창인지 확인해 보세요. 프로 선수? 헬창? 일반인? 멸치? 인공지능이 보는 나의 헬창정도를 테스트 해보세요!">
     <link rel="stylesheet" href="style.css">
-    <link rel="canonical" href="https://animalface.site" />
-    <meta property="og:url" content="https://animalface.site" />
+    <link rel="canonical" href="https://healchang.site" />
+    <meta property="og:url" content="https://healchang.site" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="헬창 테스트" />
     <meta property="og:description" content="사진으로 보는 인공지능 헬창 테스트, 어느정도의 헬창인지 확인해 보세요. 프로 선수? 헬창? 일반인? 멸치? 인공지능이 보는 나의 헬창정도를 테스트 해보세요!"
@@ -90,14 +90,14 @@
         function changeLanguage(lang) {
             if( ( navigator.userAgent.indexOf('Mac OS') > 0 && navigator.userAgent.indexOf('Safari') <= 0 ) || ( ( navigator.userAgent.indexOf('Android') > 0 && navigator.userAgent.indexOf('wv)') > 0 ) ) ){
                 if (ua.match('android') != null) {
-                    window.open("googlechrome://navigate?url=animalface.site/"+lang.value+"/index.html"); //android
+                    window.open("googlechrome://navigate?url=healchang.site/"+lang.value+"/index.html"); //android
                 } else if (ua.indexOf("iphone")>-1||ua.indexOf("ipad")>-1||ua.indexOf("ipod")>-1) { 
-                    window.location.href = "https://animalface.site/"+lang.value+"/index.html";
+                    window.location.href = "https://healchang.site/"+lang.value+"/index.html";
                 } else {
-                    window.location.href = "https://animalface.site/"+lang.value+"/index.html";
+                    window.location.href = "https://healchang.site/"+lang.value+"/index.html";
                 }
             } else {
-                window.location.href = "https://animalface.site/"+lang.value+"/index.html";
+                window.location.href = "https://healchang.site/"+lang.value+"/index.html";
             }
         }
     </script>
