커버 이미지 수정

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <meta property="og:description" content="사진으로 보는 인공지능 헬창 테스트, 어느정도의 헬창인지 확인해 보세요. 프로 선수? 헬창? 일반인? 멸치? 인공지능이 보는 나의 헬창정도를 테스트 해보세요!"/>
 	
 	<!-- sns 공유시 이미지 부분 -->
-    <meta property="og:image" content="https://ibb.co/nrrHcKY" />
+    <meta property="og:image" content="img/healchang_cover_img" />
     <!-- 파비콘 --> 
 	<link rel="shortcut icon" href="/assets/images/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/assets/images/favicon.ico" type="image/x-icon">
@@ -324,7 +324,7 @@
                         resultExplain = "당신은 헬창입니다. 치열한 노력으로 만든 11자 복근과 팔근육. 운동 지식도 상당할 것 같군요. 운동에 관심을 많이 가지고 꾸준히 하는 모습이 멋집니다."
                         resultCeleb = "여자 헬창 닮은 사람"
                         gtag('event', '여자 결과 여자 헬창', {'event_category': '여자 결과'});
-                        break;
+                        break;f
                     case "w-hl":
                         resultTitle = "헬스에 갓 입문한 헬린"
                         resultExplain = "당신은 헬린이시군요. 무거운 무게를 들면 ‘이러다 장미란 되는거 아니에요?’ 걱정할 수 있는데 그것은 편의점 알바생이 월급봉투 받고 ‘이러다 이건희 되는거 아냐?’ 하는것과 같습니다."
