--- a/index.html
+++ b/index.html
@@ -320,25 +320,25 @@
                         break;
                     case "w-hc":
                         resultTitle = "당신은 헬스 고인물 헬창"
-                        resultExplain = "당신은 헬창입니다. 치열한 노력으로 만든 11자 복근과 팔근육. 운동 지식도 상당할 것 같군요. 운동에 관심을 많이 가지고 꾸준히 하는 모습이 멋집니다."
+                        resultExplain = "당신은 헬창입니다. 치열한 노력으로 만든 11자 복근과 팔근육. 운동 지식도 상당할 것 같군요. 왠만한 남자 헬린, 멸치들은 3대운동으로 맞붙자고 할 수 있을 정도. 운동에 관심을 많이 가지고 꾸준히 해온 모습이 멋집니다. 짝짝짝"
                         resultCeleb = "여자 헬창 닮은 사람"
                         gtag('event', '여자 결과 여자 헬창', {'event_category': '여자 결과'});
                         break;f
                     case "w-hl":
                         resultTitle = "헬스에 갓 입문한 헬린"
-                        resultExplain = "당신은 헬린이시군요. 무거운 무게를 들면 ‘이러다 장미란 되는거 아니에요?’ 걱정할 수 있는데 그것은 편의점 알바생이 월급봉투 받고 ‘이러다 이건희 되는거 아냐?’ 하는것과 같습니다."
+                        resultExplain = "당신은 헬스에 이제 갓 재미를 붙이신 헬린. 형형색색의 운동복을 사는것에 재미를 붙이시고 계시군요. 헬스장에 트레이너가 와서 무게좀 치라고하면 무거운 무게를 들면 ‘이러다 장미란 되는거 아니에요?’ 걱정할 수 있는데 그것은 편의점 알바생이 월급봉투 받고 ‘이러다 이건희 되는거 아냐?’ 하는것과 같습니다." 
                         resultCeleb = "여자 헬린 닮은 사람"
                         gtag('event', '여자 결과 여자 헬린', {'event_category': '여자 결과'});
                         break;
                     case "w-sk":
                         resultTitle = "슬림한 예쁜 마른몸"
-                        resultExplain = "당신은 슬림한 일반 체형입니다. 옷핏이 아주 잘 나오는 체형입니다. 전체적으로 밸런스가 좋지만 약간의 근력운동도 필요할 것 같네요."
+                        resultExplain = "당신은 슬림한 일반 체형입니다. 슬림하다보니 옷핏이 아주 잘 나오시겠군요. 전체적으로 신체 밸런스가 좋지만 약간의 근력운동도 필요할 것 같네요. 필라테스, 요가 등 헬스를 대신할 운동도 많지만 헬스가 직방"
                         resultCeleb = "마른몸 닮은 사람"
                         gtag('event', '여자 결과 여자 마른몸', {'event_category': '여자 결과'});
                         break;
                     case "w-ow":
                         resultTitle = "건강 관리가 필요한 과체중"
-                        resultExplain = "당신은 다소 과체중일 수 있습니다. 건강을 위해서 운동을 하는 것을 추천 드립니다. "
+                        resultExplain = "당신은 다소 과체중일 수 있습니다. 내일부터 다이어트를 입에 달고사는 당신. 왜 헬스는 3개월 끊어놓고 7일밖에 안가는거죠? "
                         resultCeleb = "여자 과체중 닮은 사람"
                         gtag('event', '여자 결과 여자 과체중', {'event_category': '여자 결과'});
                         break;
@@ -360,19 +360,19 @@
                         break;
                     case "m-hc":
                         resultTitle = "당신은 헬스 고인물 헬창"
-                        resultExplain = "근손실이 무서워 눈물을 흘리는 것조차 삼가는 당신은 진정한 헬창. 혹시 썸녀가 ‘오늘 뭐해?’ 라고 하면 ‘등’ 이라고 말하진 않으시나요"
+                        resultExplain = "근손실 때문에 눈물도 흘리지 않는 당신은 진정한 헬창. 혹시 썸녀가 ‘오늘 뭐해?’ 라고 하면 ‘등이랑 삼두!’ 라고 하시진 않으시나요?"
                         resultCeleb = "남자 헬창 선수 이름"
                         gtag('event', '남자 결과 남자 헬창', {'event_category': '남자 결과'});
                         break;
                     case "m-hl":
                         resultTitle = "헬스에 갓 입문한 헬린"
-                        resultExplain = "열심히는 운동하나 아직은 다소 아쉬운 몸입니다. 사레레 익룡 날개짓 하지마시고 ‘와 이러다 뒤지겠는데?’ 라는 생각이 들때까지 3대 운동 운동하세요."
+                        resultExplain = "열심히는 운동하나 아직은 다소 아쉬운 몸입니다. 개인옷보다는 헬스장에서 주는옷에 익숙한 당신. 아직까진 헬창들 눈치보며 운동할 시기군요.사레레 익룡 날개짓 하지마시고 ‘와 이러다 뒤지겠는데?’ 라는 생각이 들때까지 3대 운동하세요."
                         resultCeleb = "남자 헬리니 선수"
                         gtag('event', '남자 결과 남자 헬린', {'event_category': '남자 결과'});
                         break;
                     case "m-mc":
                         resultTitle = "진한 육수가 우러져 나오는 멸치"
-                        resultExplain = "당신은 진한 육수가 우러져 나올 것 같은 완전한 멸치입니다. 살찌우기 힘드시겠지만 꾸준히 하시다보면 언젠가 몸은 커지긴 개뿔... "
+                        resultExplain = "당신은 진한 육수가 우러져 나올 것 같은 완전한 멸치입니다. 살찌우기 힘드시겠지만 꾸준히 하시다보면 언젠가 몸은 커지지 않습니다... 튀어나온 뼈를 식스팩으로 착각하고 있지는 않나요. 여자는 본인보다 마른 남자를 좋아하지 않아요 ㅠㅠ"
                         resultCeleb = "남자 멸치 내용 추가"
                         gtag('event', '남자 결과 남자 멸치', {'event_category': '남자 결과'});
                         break;
