--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 	
 <body>
     <nav class="p-3 container navbar navbar-expand-lg navbar-light">
-        <a class="navbar-brand" href="https://healchang.site/">헬창 테스트</a>
+        <h2 class="navbar-brand" href="https://healchang.site/">헬창 테스트</h2>
     </nav>
 	<!-- 언어 설정 
     <section class="container d-flex flex-column justify-content-center align-items-center">
@@ -112,7 +112,7 @@
     </section>
 	
 	
-	<!-- 사진 올리는 부분 -->
+	<!---------------- 사진 올리는 부분 ---------------------->
     <script class="jsbin" src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
     <div class="mt-3 container file-upload">
         
@@ -177,6 +177,8 @@
             </ul>
         </div>
     </footer>
+	
+	
 	
 	<!------------------------- scritp ----------------------------------->
     <script>
