쿠팡 광고 수정

--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@
 		<div>
 			<div class="d-flex justify-content-center" >
 				<script src="https://ads-partners.coupang.com/g.js"></script>
-					<script>
-						new PartnersCoupang.G({ id:229813 });
+				<script>
+					new PartnersCoupang.G({ id:229813 });
 				</script>
 			</div>
 			<a class="nav-link d-flex justify-content-center" id="yotube-top-link" style="padding-top: 28px;" href="https://www.youtube.com/channel/UCQNE2JmbasNYbjGAcuBiRRg">제작 도움 : 조코딩 유튜브 채널</a>
@@ -288,7 +288,7 @@
 					case "w-pro":
                         resultTitle = "당신은 헬스계의 신 프로선수"
                         resultExplain = "어서오십시오.. 대선배님. 누추한 곳 방문해주셔서 감사합니다. 헬창의 레벨을 뛰어넘어 오랜시간 운을동 사랑하고 지속해온 당신은 상위 1% 내의 프로 선수이거나 준 프로선수."
-                        resultCeleb = "프로선수 선수: 지연우, 정유인, 장미란, 김혜영, 베카스완슨, "
+                        resultCeleb = "닮은 프로선수 선수: 지연우, 정유인, 장미란, 김혜영, 베카스완슨, "
                         gtag('event', '여자 결과 여자 프로선수', {'event_category': '여자 결과'});
                         break;
                     case "w-hc":
@@ -328,7 +328,7 @@
                     case "m-pro":
                         resultTitle = "당신은 헬스계의 신 프로선수"
                         resultExplain = "어서오십시오.. 대선배님. 누추한 곳 방문해주셔서 감사합니다. 헬창의 레벨을 뛰어넘어 오랜시간 운을동 사랑하고 지속해온 당신은 상위 1% 내의 프로 선수이거나 준 프로선수."
-                        resultCeleb = "프로 선수 : 강경원, 김준호, 설기관, 김성환, 카이그린, 아놀드 슈워 제네거"
+                        resultCeleb = "닮은 프로 선수 : 아놀드 슈워 제네거, 카이그린, 강경원, 김준호, 설기관, 김성환, "
                         gtag('event', '남자 결과 남자 프로선수', {'event_category': '남자 결과'});
                         break;
                     case "m-hc":
