오탈자 수정

--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                     case "w-hl":
                         resultTitle = "당신은 헬스에 갓 입문한 헬린"
                         resultExplain = "당신은 헬스에 이제 갓 재미를 붙이신 헬린. 형형색색의 운동복을 사는것에 재미를 붙이시고 계시군요. 헬스장에 트레이너가 와서 무게좀 치라고하면 무거운 무게를 들면 ‘이러다 장미란 되는거 아니에요?’ 걱정할 수 있는데 그것은 편의점 알바생이 월급봉투 받고 ‘이러다 이건희 되는거 아냐?’ 하는것과 같습니다." 
-                        resultCeleb = "헨린 연예인 : 홍진영, 김사랑, 신민아, 전지현, 나나, 손담비, 클라라"
+                        resultCeleb = "헬린 연예인 : 홍진영, 김사랑, 신민아, 전지현, 나나, 손담비, 클라라"
                         gtag('event', '여자 결과 여자 헬린', {'event_category': '여자 결과'});
                         break;
                     case "w-sk":
