--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <title>헬창 테스트</title>
     <link rel="alternate" hreflang="x-default" href="https://healchang.site/" />
+	
+	<!--web master-->
+	<meta name="naver-site-verification" content="f92558876dc8ce1be338180b14f390333087a3e3" />
     
 	<meta name="title" content="헬창 테스트">
     <meta name="subject" content="사진으로 보는 AI 헬창 테스트, 나는 어느 정도의 몸일까요">
