--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	
 	<!--web master-->
 	<meta name="naver-site-verification" content="f92558876dc8ce1be338180b14f390333087a3e3" />
+
     
 	<meta name="title" content="헬창 테스트">
     <meta name="subject" content="사진으로 보는 AI 헬창 테스트, 나는 어느 정도의 몸일까요">
@@ -28,7 +29,7 @@
     <meta property="og:description" content="사진으로 보는 인공지능 헬창 테스트, 어느정도의 헬창인지 확인해 보세요. 프로 선수? 헬창? 일반인? 멸치? 인공지능이 보는 나의 헬창정도를 테스트 해보세요!"/>
 	
 	<!-- sns 공유시 이미지 부분 -->
-    <meta property="og:image" content="img/healchnag_cover_img.png" />
+    <meta property="og:image" content="https://i.imgur.com/gGdio3W.jpg" />
 	
     <!-- 파비콘 --> 
 	<link rel="shortcut icon" href="img/ht_favicon.ico" type="image/x-icon">
