--- a/index.html
+++ b/index.html
@@ -134,19 +134,29 @@
 
 	
     <div class="container pt-3">
-        <div id="disqus_thread"></div>
+		<div class="d-flex justify-content-center" style="margin-top: 18px;">
+				<script src="https://ads-partners.coupang.com/g.js"></script>
+				<script>
+					new PartnersCoupang.G({ id:229813 });
+				</script>
+			</div>
+        <div id="disqus_thread" style="margin-top: 25px;"></div>
+			<script>
+			(function() { // DON'T EDIT BELOW THIS LINE
+			var d = document, s = d.createElement('script');
+			s.src = 'https://www-healchang-site-1.disqus.com/embed.js';
+			s.setAttribute('data-timestamp', +new Date());
+			(d.head || d.body).appendChild(s);
+			})();
+			</script>
+		<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
     </div>
 	
 	
     <footer class="footer pt-5 container d-flex justify-content-center">
         
 		<div>
-			<div class="d-flex justify-content-center" >
-				<script src="https://ads-partners.coupang.com/g.js"></script>
-				<script>
-					new PartnersCoupang.G({ id:229813 });
-				</script>
-			</div>
+			
 			<a class="nav-link d-flex justify-content-center" id="yotube-top-link" style="padding-top: 28px;" href="https://www.youtube.com/channel/UCQNE2JmbasNYbjGAcuBiRRg">제작 도움 : 조코딩 유튜브 채널</a>
 			<p class="d-flex justify-content-center" >&copy; 헬창테스트 All Rights Reserved. </p>
 		</div>
