--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 					new PartnersCoupang.G({ id:229813 });
 				</script>
 			</div>
-        <div id="disqus_thread" style="margin-top: 25px;"></div>
+        <div id="disqus_thread"></div>
 			<script>
 			(function() { // DON'T EDIT BELOW THIS LINE
 			var d = document, s = d.createElement('script');
@@ -149,7 +149,8 @@
 			(d.head || d.body).appendChild(s);
 			})();
 			</script>
-		<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+			<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+                            
     </div>
 	
 	
