diqus ko margin

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 					new PartnersCoupang.G({ id:229813 });
 				</script>
 			</div>
-        <div id="disqus_thread"></div>
+        <div id="disqus_thread" style="margin-top: 28px;"></div>
 			<script>
 			(function() { // DON'T EDIT BELOW THIS LINE
 			var d = document, s = d.createElement('script');
