upload comment edited

--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
             <div class="drag-text">
                 <img src="img/upload.svg" class="mt-5 pt-5 upload" alt="upload-image">
                 <h3 class="mb-5 pb-5 pt-4  upload-text">사진을 올려놓거나 <br> 눌러서 업로드</h3>
+				<h5>전신 사진을 올리면 더 정확하게 측정 됩니다. <br>(사진은 저장되지 않아요!)</h5>
             </div>
         </div>
 
