add this edited

--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
     <!-- 파비콘 --> 
 	<link rel="shortcut icon" href="img/ht_favicon.ico" type="image/x-icon">
     <link rel="icon" href="img/ht_favicon.ico" type="image/x-icon">
-    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5e64b3727e862b06"></script>
+	
+	<!--addthis-->
+	<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5eb970466cc3b421"></script>
 	
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-165875019-1"></script>
@@ -121,7 +123,7 @@
             
 			<!-- 라벨 콘테이너 -->
 			<div id="label-container" class="d-flex flex-column justify-content-around"></div>
-            <div id="addThis" class="addthis_inline_share_toolbox_6lz1"></div>
+            <div id="addThis" class="addthis_inline_share_toolbox" style="clear: both;margin-top:24px;"></div>
             
 			<div class="pt-3 image-title-wrap">
                 <button type="button p-2" class="try-again-btn" onclick="gaReload()">
