add this edited 2

--- a/index.html
+++ b/index.html
@@ -123,9 +123,12 @@
             
 			<!-- 라벨 콘테이너 -->
 			<div id="label-container" class="d-flex flex-column justify-content-around"></div>
-            <div id="addThis" class="addthis_inline_share_toolbox" style="clear: both;margin-top:24px;"></div>
+			<div id="label-container" style="clear: both;margin-top:24px;">
+				<span>▼ 테스트 결과를 친구에게 공유해 보세요! ▼</span>
+			</div>
+            <div id="addThis" class="addthis_inline_share_toolbox" style="margin-top:15px;"></div>
             
-			<div class="pt-3 image-title-wrap">
+			<div class="pt-3 image-title-wrap" style="margin-top:10px;">
                 <button type="button p-2" class="try-again-btn" onclick="gaReload()">
                     <span class="try-again-text">다른 사진으로 재시도</span>
                 </button>
