--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
   		gtag('js', new Date());
   		gtag('config', 'UA-165875019-1');
 	</script>
+	
+	<!--google adsense-->
+	<script data-ad-client="ca-pub-1743354515472527" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
     
 </head>
