sns sharing ment edit

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 			<!-- 라벨 콘테이너 -->
 			<div id="label-container" class="d-flex flex-column justify-content-around"></div>
 			<div id="label-container" style="clear: both;margin-top:24px;">
-				<span>▼ 테스트 결과를 친구에게 공유해 보세요! ▼</span>
+				<span>▼ 테스트를 친구에게 공유해 보세요! ▼</span>
 			</div>
             <div id="addThis" class="addthis_inline_share_toolbox" style="margin-top:15px;"></div>
             
